--- a/index.html
+++ b/index.html
@@ -10,4 +10,4 @@
     
 </body>
 </html>
-<script type="text/javascript" src="array.some.or.every.js"></script>
+<script type="text/javascript" src="array-methods/array.some.or.every.js"></script>
